[package]
name = "bevy_spritesheet_animation"
version = "6.1.0"
description = "A Bevy plugin for animating sprites"
repository = "https://github.com/merwaaan/bevy_spritesheet_animation"
readme = "README.md"
license = "MIT"
keywords = ["bevy", "sprite", "animation"]
categories = ["game-development"]
edition = "2024"
resolver = "3"
exclude = ["assets/example.gif", "assets/example_3d.gif", "assets/example_cursor.gif", "assets/example_ui.gif"]

[features]
default = [
  # In practice, this feature flag is not required as we use optional arguments for our Bevy systems.
  # However, the Github Action's environment does not support winit, which is a transitive dependency of bevy/custom_cursor.
  # So hiding this behind a feature allows us to run tests with --no-default-features in that specific context and circumvent the issue.
  "custom_cursor",
  "3d"
]
custom_cursor = ["bevy/custom_cursor"]
3d = ["bevy/bevy_pbr"]

# Allows to serialize the animations
serde = ["dep:serde"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "bevy_log",
  "bevy_sprite",
  "bevy_ui"
] }
serde = { version = "1.0.228", optional = true }

[[example]]
name = "3d"
required-features = ["3d"]

[[example]]
name = "stress"
# stress example uses both 2d and 3d depending on CLI args, 
# but we need to guard the 3d code inside it.
# Actually, it's easier to just require 3d feature to run it if we don't want to overcomplicate the code.
# Or we can just guard the code.

[[example]]
name = "cursor"
required-features = ["custom_cursor"]

[dev-dependencies]
approx = "0.5.1"
bevy = { version = "0.18", features = [
  # Needed for the "stress" example  as it uses Bevy's FPS overlay
  "bevy_dev_tools"
] }
clap = { version = "4.5.54", features = ["derive"] }
rand = "0.9"

[lints.clippy]
# Bevy systems can have a lot of arguments
too_many_arguments = "allow"
type_complexity = "allow"

# Like for our CI, docs.rs won't be able to build the documentation with the "custom_cursor" feature enabled
[package.metadata.docs.rs]
no-default-features = true
